--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,27 +1,23 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Categories</h1>
+<div class = "jumbotron"> 
+  <h2>What do you want to <strong>improve?</strong></h2>
+  <p><button type="button" class="btn btn-info"><%= link_to "Log In", new_user_session_path %></button> or <button type="button" class="btn btn-info"><%= link_to "Sign Up", new_user_registration_path %></button> to get started </p> 
+</div> 
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @categories.each do |category| %>
-      <tr>
-        <td><%= category.name %></td>
-        <td><%= link_to 'Show', category %></td>
-        <td><%= link_to 'Edit', edit_category_path(category) %></td>
-        <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Category', new_category_path %>
+<% @categories.each do |category| %> 
+<div class="container">
+    <hr class="">
+      <div class="col-md-12">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+                <h3 class=""><%= category.name %></h3>
+            </div>
+              <div class="panel-body"><%= category.description %></div>
+              <div class="panel-footer"><%= link_to 'Get Started', new_experiment_path(category_id: category.id) %></div>
+            </div>
+          </div>
+        </div>
+      </div>
+</div>
+<% end %>
