--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,13 +1,21 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
+  <button type="button" class="btn btn-info">
+    <%= link_to "Log in", new_session_path(resource_name) %><br />
+  </button>
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+<button type="button" class="btn btn-info">
   <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+</button>
 <% end -%>
+<br />
+<br />
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
+<button type="button" class="btn btn-info">
   <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
+</button>
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
