--- a/app/views/experiments/show.html.erb
+++ b/app/views/experiments/show.html.erb
@@ -1,9 +1,20 @@
 <p id="notice"><%= notice %></p>
 
+<p> This is where I want to show specifics about the goal</p>
 <p>
-  <strong>Goal:</strong>
-  <%= @experiment.goal %>
+Kind of like a confirmation page
 </p>
+<p> But then maybe some add-ons as well? 
+  Picture for motivation? 
+  Share with a friend? 
+</p> 
+
+<p> 
+  At the bottom submit
+  And that action triggers an email notification 
+</p>
+
+<p> After that have to build in automated scheduled texting! eeek </p>
 
 <%= link_to 'Edit', edit_experiment_path(@experiment) %> |
 <%= link_to 'Back', experiments_path %>
